--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <!--
 	Prologue by HTML5 UP
 	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license) -->
+<!--
 	Who has time to create their own personal website, am I right? (Just kidding, I'm working on it, it's just not high priority)
 -->
 <html>
 	<head>
-		<title>The Outpost | Front-end web development</title>
+		<title>The Outpost | front-end web development, anywhere in the galaxy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -29,7 +29,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.png" alt="" /></span>
 							<h1 id="title">the outpost</h1>
-							<p>front-end web design &amp;<br>development</p>
+							<p>front-end web development,<br> anywhere in the galaxy</p>
 						</div>
 
 					<!-- Nav -->
@@ -67,8 +67,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hey! My name's <strong>Jon Reimer</strong> and I design tiny universes that exist on&nbsp;the&nbsp;internet.</h2>
-								<p>I'm currently stationed near Calgary, Alberta. Sometimes I tap my keyboard for a bit, only to discover that a new website or app has manifested&nbsp;itself.</p>
+								<h2 class="alt">Welcome to <strong>The Outpost</strong></h2><p>The digital home of Jon Reimer, front-end web developer &amp; designer.</p>
 							</header>
 
 						</div>
@@ -160,22 +159,32 @@
 
 							<img class="image featured" src="images/pic08.jpg" alt="" />
 
-							<p>I'm a front-end web developer with some experience in graphic design &amp; back-end languages. For some reason I find "information processing" and "educational apps" to be interesting, but sadly haven't had the opportunity to work on any. I would love to make learning as exciting &amp; fun for other people as it is for me. Android development is next on my "to-learn" list, since all my projects ideas seem to start with "hmm, I wish I could do that on my&nbsp;phone".</p>
+							<p>While front-end development is where I do most of my work, I enjoy exploring the full web stack and will occasionally
+                            dabble in graphic design. I often help start-ups and local businesses establish their space in the modern digital world,
+                            or dream about making science- and travel- focused web apps.</p>
 
-							<h3>The tech details</h3>
-							<p>For any web developer, HTML, CSS, &amp; JavaScript are the bread-and-butter of their skill-set. Unfortunately, those languages are tiresome at best, so I've mixed things up a bit to keep myself excited about coding even when dealing with the basics: <a href="https://pugjs.org/api/getting-started.html">Pug</a> (aka. Jade), <a href="
-//sass-lang.com/">Sass</a>, &amp; <a href="
-//coffeescript.org/v2">CoffeeScript</a> spice things up nicely <em>and</em> allow for extra efficiency. And because I crave slightly excessive levels of customization, my coding is done in <strong><a href="https://www.sublimetext.com/">Sublime&nbsp;Text</a></strong>.</p>
-							<p>Here's a quick rundown of the languages &amp; programs I am most familiar with:<br>
-							<strong>Photoshop | HTML5/Pug/Emmet | CSS3/Sass | JS/jQuery/JSON/CoffeeScript | Git/Gulp </strong></p>
-							<p>I've also done a fair bit of the following, but am less proficient with them:<br>
-							<strong>Illustrator | PHP | MySQL | Node</strong></p>
-							<p>I'm also in the process of learning a bunch of new things, such as:<br>
-							<strong>Python | Wordpress | MySQLi | Webpack | Angular  </strong></p>
-
-							<h3>Hobbies</h3>
-							<p>When I'm not making websites I'm often either playing computer games or out hiking. I'm a hobbyist photographer, and sometimes I dabble in making weird music. I used to draw a lot, but art has taken a backseat to life lately. Usually I spend most of my time daydreaming about traveling &amp; road trips.</p>
-
+                            <section class='flexbox'>
+                                <div class='toolbox'><strong>TOOLBOX</strong>
+                                <ul>
+                                    <li>Affinity <span class="fancy">&amp;</span> Adobe Suites</li>
+                                    <li>Typescript, Sass, HTML5</li>
+                                    <li>Git <span class="fancy">&amp;</span> Gulp</li>
+                                </ul></div>
+                                <div class='passions'><strong>PASSIONS</strong>
+                                    <ul>
+                                        <li>Science <span class="fancy">&amp;</span> Data Processing</li>
+                                        <li>Travel <span class="fancy">&amp;</span> Nature Photography</li>
+                                        <li>Music <span class="fancy">&amp;</span> Games</li>
+                                    </ul>
+                                </div>
+                                <div class='todo'><strong>TO-DO LIST</strong>
+                                    <ul>
+                                        <li>Learn Vue, Apollo, Python</li>
+                                        <li><span>Build a mobile app</span> <span>or game</span></li>
+                                        <li><span>Explore the world's</span> <span>remote locations</span></li>
+                                    </ul>
+                                </div>
+                            </section>
 						</div>
 					</section>
 
@@ -187,7 +196,9 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Need a website or some slick graphics? Want to discuss something with me? Now's a great time to do those things. Send me an email below. If that seems too easy for you, you can send me an email the old fashioned way at <strong><a href="mailto:hi@astranomaly.com">hi@astranomaly.com</a></strong> or via smoke signals.</p>
+							<p>Hey, if you want to get in touch&mdash;be it for freelance work, an employee position, or just to talk about cool
+                            ideas&mdash;feel free to send me an email, anytime.</p>
+                            <h3><a href="mailto:hi@theoutpost.dev">hi@theoutpost.dev</a></h3>
 						</div>
 					</section>
 
