npm init; added sass build commands; adjusted css

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Welcome to <strong>The Outpost</strong></h2><p>The digital home of Jon Reimer, front-end web developer &amp; designer.</p>
+								<h2 class="alt">Welcome to <strong>The Outpost</strong></h2><p>The digital home of Jon Reimer, front-end <span class="nbs">developer &amp; designer.</span></p>
 							</header>
 
 						</div>
@@ -180,8 +180,8 @@
                                 <div class='todo'><strong>TO-DO LIST</strong>
                                     <ul>
                                         <li>Learn Vue, Apollo, Python</li>
-                                        <li><span>Build a mobile app</span> <span>or game</span></li>
-                                        <li><span>Explore the world's</span> <span>remote locations</span></li>
+                                        <li><span class="nbs">Build a mobile app</span> <span class="nbs">or game</span></li>
+                                        <li><span class="nbs">Explore the world's</span> <span class="nbs">remote locations</span></li>
                                     </ul>
                                 </div>
                             </section>
