added lightbox; updated template; created new pages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 		<title>The Outpost | front-end web development, anywhere in the galaxy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+        <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,600">
 		<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 		<link rel="stylesheet" href="assets/css/main.css">
@@ -26,11 +27,11 @@
 				<div class="top">
 
 					<!-- Logo -->
-						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.png" alt="" /></span>
-							<h1 id="title">the outpost</h1>
-							<p>front-end web development,<br> anywhere in the galaxy</p>
-						</div>
+                        <div id="logo">
+                            <span class="image avatar48"><a href="index.html"><img src="images/avatar.png" alt="" /></a></span>
+                            <h1 id="title">the outpost</h1>
+                            <p>front-end web development,<br> anywhere in the galaxy</p>
+                        </div>
 
 					<!-- Nav -->
 						<nav id="nav">
