--- a/twib.html
+++ b/twib.html
@@ -1,37 +1,38 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Portfolio | t.w.i.b</title>
+		<title>The Outpost | Userscript Experiments</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+        <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="
 //fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,600">
 		<link rel="stylesheet" href="assets/css/font-awesome.min.css">
-		<link rel="stylesheet" href="assets/css/main.css">
+        <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="stylesheet" href="assets/lib/jquery-colorbox/example3/colorbox.css">
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
 	<body>
-
 		<!-- Header -->
 			<div id="header">
 
 				<div class="top">
 
 					<!-- Logo -->
-						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.png" alt="" /></span>
-							<h1 id="title">astranomaly</h1>
-							<p>cosmic adventurer<br>&amp; web developer</p>
-						</div>
+                        <div id="logo">
+                            <span class="image avatar48"><a href="index.html"><img src="images/avatar.png" alt="" /></a></span>
+                            <h1 id="title">the outpost</h1>
+                            <p>front-end web development,<br> anywhere in the galaxy</p>
+                        </div>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-chevron-circle-up">Top</span></a></li>
 								<li><a href="#info" id="info-link" class="skel-layers-ignoreHref"><span class="icon fa-info-circle">Information</span></a></li>
-								<!-- <li><a href="#screenshots" id="screenshots-link" class="skel-layers-ignoreHref"><span class="icon fa-picture-o">Screenshots</span></a></li> -->
+								<li><a href="#screenshots" id="screenshots-link" class="skel-layers-ignoreHref"><span class="icon fa-picture-o">Screenshots</span></a></li>
 								<li id="back-link"><a href="index.html#portfolio"><span class="icon fa-chevron-circle-left">Back</span></a></li>
 							</ul>
 						</nav>
@@ -41,14 +42,18 @@
 				<div class="bottom">
 
 					<!-- Social Icons -->
-						<ul class="icons">
-							<li><a href="https://bitbucket.org/Astranomaly" title="bitbucket" class="icon fa-bitbucket"><span class="label">Bitbucket</span></a></li>
-							<li><a href="
-//xenrin.deviantart.com" title="deviantart" class="icon fa-deviantart"><span class="label">deviantArt</span></a></li>
-							<li><a href="https://twitter.com/Astranomaly" title="twitter" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://ca.linkedin.com/in/jonjreimer" title="linkedin" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="mailto:hi@astranomaly.com" title="email" class="icon fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
+                        <ul class="icons">
+                            <li><a href="https://github.com/astranomaly" title="github" class="icon fa-github"><span
+                                        class="label">Github</span></a></li>
+                            <li><a href="https://pixelfed.social/Vesper" title="pixelfed" class="icon fa-instagram"><span
+                                        class="label">Photos</span></a></li>
+                            <li><a href="https://twitter.com/Astranomaly" title="twitter" class="icon fa-twitter"><span
+                                        class="label">Twitter</span></a></li>
+                            <li><a href="https://ca.linkedin.com/in/jonjreimer" title="linkedin" class="icon fa-linkedin"><span
+                                        class="label">LinkedIn</span></a></li>
+                            <li><a href="mailto:hi@theoutpost.dev" title="email" class="icon fa-envelope"><span class="label">Email</span></a>
+                            </li>
+                        </ul>
 
 				</div>
 
@@ -58,13 +63,13 @@
 			<div id="main">
 
 				<!-- Intro -->
-					<section id="top" class="one dark cover twib">
+					<section id="top" class="one dark cover userscripts">
 						<div class="container">
 
 							<header>
-								<h2 class="alt">the.weather.is.beautiful</h2>
-								<p>A passive web-app to simplify the forecast</p>
-							</header>
+								<h2 class="alt">Userscript Experiments</h2>
+								<p>Additional features <span class="fancy">&amp;</span> useability <span class='nbs'>across the web</span></p>
+                            </header>
 
 						</div>
 					</section>
@@ -77,26 +82,21 @@
 								<h2>Information</h2>
 							</header>
 
-							<!-- <img class="image featured" src="images/pic08.jpg" alt="" /> -->
+                            <p>This was a class assignment done in our second Adobe Flash course and is (clearly) a remake of the classic Space Invaders arcade game. It's currently missing its preloader, and there are a few things I would like to tweak about the gameplay mechanics and graphics, but otherwise the game is both complete and playable.</p>
 
-							<p>These days, nearly everyone checks the weather online. So why is it that all the popular weather sites are so unintuitive and bland? <strong>The Weather Is Beautiful</strong> (aka. TWIB) is my attempt to fix these problems. There is no clutter. There is no adspace. There is just the weather.</p>
-							<p>And the weather is beautiful.</p>
-							<p>This project is a proof-of-concept for a single-serving weather web-app that is dynamically driven and focused on visual aesthetics. Is it the middle of the day? The background will change to a soft blue to reflect this. Nighttime? It's now a deep purple. Your location is automatically detected, but by signing up you can change your location and save two favourites.</p>
-							<p>Right now, most of the dynamic content is only partially implemented. In the future, rain &amp; snow will cause rain &amp; snow animations, plants will flourish based on the season, and temperature will affect the colour of the site, among many planned features. For now, it's just a simple, no-nonsense weather site.</p>
-							<p><a href='/twib'>Click here to try the demo</a>. Try logging in with:</p>
-							<blockquote><p>
-								<strong>email:</strong> test@test.com<br>
-								<strong>pass:</strong> test
-							</p></blockquote>
+                            <img class="image featured" src="images/pic08.jpg" alt="" />
+
+							<p>I previously held contests to see who could get the highest score, but then I changed where the game was stored on my website and broke the scoreboard... Oops. It's an easy fix but I no longer own Flash.</p>
 
 							<h3>Technologies</h3>
-							<p>TWIB is based on a framework of <strong>HTML</strong>, <strong>CSS</strong>, and <strong>jQuery</strong>. It uses <strong>AJAX</strong> to receive <strong>JSON</strong> from the <a href="
-//www.wunderground.com/?apiref=dcce31f720628bd9">Weather Underground</a>'s <strong>API</strong>, which is then used to update the website's design and content. The user account system uses <strong>PHP</strong> to connect to <strong>MySQL databases</strong>.</p>
+							<p>This game uses nothing more than <strong>ActionScript 2</strong> and <strong>PHP/MySQL</strong>. The graphics were designed by-hand using the awesome <a href="https://itunes.apple.com/us/app/pixen/id525180431?mt=12">Pixen</a> graphics program for Mac OS X, and the music is the title track to "<a href="
+//www.8bitpeoples.com/products/520393-starscream-future-and-it-doesnt-work">Future, and It Doesn't Work</a>" by <strong>Infinity Shred</strong> (aka. Starscream).</p>
+                            <a class='button' href="#"><span class="icon fa-github"></span> Userscript Template</a>
 
 						</div>
 					</section>
 
-					<!-- Screenshots -->
+                    <!-- Screenshots -->
 					<section id="screenshots" class="three">
 						<div class="container">
 
@@ -107,19 +107,28 @@
 							<div class="row">
 								<div class="4u 12u$(mobile)">
 									<article class="item">
-										<a href="javascript:void(0)" class="image fit"><img src="images/sc-twib-1.jpg" alt="" /></a>
+										<a href="images/mine.jpg" class="image fit gallery"><img src="images/twib.jpg" alt="" /></a>
+									</article>
+									<article class="item">
+										<a href="images/mine.jpg" class="image fit gallery"><img src="images/mine.jpg" alt="" /></a>
 									</article>
 								</div>
 
 								<div class="4u 12u$(mobile)">
 									<article class="item">
-										<a href="javascript:void(0)" class="image fit"><img src="images/sc-twib-2.jpg" alt="" /></a>
+										<a href="images/mine.jpg" class="image fit gallery"><img src="images/invade.jpg" alt="" /></a>
+									</article>
+									<article class="item">
+										<a href="images/mine.jpg" class="image fit gallery"><img src="images/carpentry.jpg" alt="" /></a>
 									</article>
 								</div>
 
 								<div class="4u$ 12u$(mobile)">
 									<article class="item">
-										<a href="javascript:void(0)" class="image fit"><img src="images/sc-twib-3.jpg" alt="" /></a>
+										<a href="images/mine.jpg" class="image fit gallery"><img src="images/vox.jpg" alt="" /></a>
+									</article>
+									<article class="item">
+										<a href="images/mine.jpg" class="image fit gallery"><img src="images/salsa.jpg" alt="" /></a>
 									</article>
 								</div>
 							</div>
@@ -130,16 +139,16 @@
 			</div>
 
 		<!-- Footer -->
-			<div id="footer">
+            <div id="footer">
 
-				<!-- Copyright -->
-					<ul class="copyright">
-						<li>&copy; 2015 Jon Reimer</li>
-						<li>Design: <a href="
-//html5up.net">HTML5 UP</a></li>
-					</ul>
+                <!-- Copyright -->
+                <ul class="copyright">
+                    <li>&copy; 2019 Jon Reimer</li>
+                    <li>Design: <a href="
+            //html5up.net">HTML5 UP</a></li>
+                </ul>
 
-			</div>
+            </div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -147,9 +156,10 @@
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.scrollzer.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
+            <script src="assets/js/util.js"></script>
+            <script src="assets/lib/jquery-colorbox/jquery.colorbox-min.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+            <script src="assets/js/main.js"></script>
 
 	</body>
 </html>
