--- a/index.html
+++ b/index.html
@@ -80,68 +80,50 @@
 
 							<header>
 								<h2>Portfolio</h2>
-							</header>
+                            </header>
 
 							<div class="row">
 								<div class="4u 12u$(mobile)">
-									<article class="item">
-										<a href="storage.html" class="image fit"><img src="images/storage.jpg" alt="" /></a>
+									<article class="item code">
+										<a href="userscripts.html" class="image fit"><img src="images/userscripts.jpg" alt="" /></a>
 										<header>
-											<h3>Blackie Mini Storage</h3>
+											<h3>Userscript Experiments</h3>
 										</header>
 									</article>
-									<article class="item">
-										<a href="mine.html" class="image fit"><img src="images/mine.jpg" alt="" /></a>
+									<article class="item design">
+										<a href="design.html" class="image fit"><img src="images/carpentry.jpg" alt="" /></a>
 										<header>
-											<h3>Mineshaft Mishap</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="safari.html" class="image fit"><img src="images/safari.jpg" alt="" /></a>
-										<header>
-											<h3>Secondhand Safari</h3>
+											<h3>Graphic Design</h3>
 										</header>
 									</article>
 								</div>
 
 								<div class="4u 12u$(mobile)">
-									<article class="item">
-										<a href="twib.html" class="image fit"><img src="images/twib.jpg" alt="" /></a>
+									<article class="item server">
+										<a href="maxq.html" class="image fit"><img src="images/maxq.jpg" alt="" /></a>
 										<header>
-											<h3>the.weather.is.beautiful</h3>
+											<h3>Max Q Live</h3>
 										</header>
 									</article>
-									<article class="item">
-										<a href="carpentry.html" class="image fit"><img src="images/carpentry.jpg" alt="" /></a>
-										<header>
-											<h3>Reimer Carpentry</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="shadow.html" class="image fit"><img src="images/shadow.jpg" alt="" /></a>
-										<header>
-											<h3>The Shadowlands</h3>
-										</header>
-									</article>
+                                    <article class="item code">
+                                        <a href="twib.html" class="image fit"><img src="images/twib.jpg" alt="" /></a>
+                                        <header>
+                                            <h3>the.weather.is.beautiful</h3>
+                                        </header>
+                                    </article>
 								</div>
 
 								<div class="4u$ 12u$(mobile)">
-									<article class="item">
-										<a href="space.html" class="image fit"><img src="images/invade.jpg" alt="" /></a>
+                                    <article class="item code">
+                                        <a href="storage.html" class="image fit"><img src="images/storage.jpg" alt="" /></a>
+                                        <header>
+                                            <h3>Blackie Mini Storage</h3>
+                                        </header>
+                                    </article>
+									<article class="item design">
+										<a href="mockups.html" class="image fit"><img src="images/vox.jpg" alt="" /></a>
 										<header>
-											<h3>Space Invaders: Astranomaly</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="vox.html" class="image fit"><img src="images/vox.jpg" alt="" /></a>
-										<header>
-											<h3>Vox Motu</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="salsa.html" class="image fit"><img src="images/salsa.jpg" alt="" /></a>
-										<header>
-											<h3>S.A.L.S.A Writer</h3>
+											<h3>Web Mockups</h3>
 										</header>
 									</article>
 								</div>
@@ -173,8 +155,8 @@
                                 </ul></div>
                                 <div class='passions'><strong>PASSIONS</strong>
                                     <ul>
-                                        <li>Science <span class="fancy">&amp;</span> Data Processing</li>
-                                        <li>Travel <span class="fancy">&amp;</span> Nature Photography</li>
+                                        <li>Science and Data Processing</li>
+                                        <li>Travel and Nature Photography</li>
                                         <li>Music <span class="fancy">&amp;</span> Games</li>
                                     </ul>
                                 </div>
@@ -205,17 +187,18 @@
 
 			</div>
 
-		<!-- Footer -->
-			<div id="footer">
+        <!-- Footer -->
+        <div id="footer">
 
-				<!-- Copyright -->
-					<ul class="copyright">
-						<li>&copy; 2019 Jon Reimer</li>
-						<li>Design: <a href="
-//html5up.net">HTML5 UP</a></li>
-					</ul>
+            <!-- Copyright -->
+            <ul class="copyright">
+                <li>&copy; 2019 Jon Reimer</li>
+                <li>Design: <a href="
+                    https://html5up.net">HTML5 UP</a></li>
+                <li>Hosting: <a href="https://github.com/astranomaly/astranomaly.github.io">Github Pages</a></li>
+            </ul>
 
-			</div>
+        </div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
