--- a/storage.html
+++ b/storage.html
@@ -88,7 +88,7 @@
 							<p>It may be a small detail, but I'm really proud of the "Directions" button and how its behavior and presentation are adjusted according to the device being used. It's not something that would normally be noticed if you weren't looking for it.</p>
 
 							<h3>Technologies</h3>
-                            <p>After a year of experimenting with preprocessors, this was my first finished website preprocessed with <a href="https://pugjs.org/"> Pug (aka. Jade)</a> and <a href="https://sass-lang.com/">Sass</a>. It was also the first fully responsive website I had build from scratch, as that had somehow not been part of my school curriculum&hellip; It's always an exciting experience to transition from "learning" to "applying".</p>
+                            <p>After a year of experimenting with preprocessors, this was my first finished website preprocessed with <span class="nbs"><a href="https://pugjs.org/"> Pug (aka. Jade)</a></span> and <a href="https://sass-lang.com/">Sass</a>. It was also the first fully responsive website I had build from scratch, as that had somehow not been part of my school curriculum&hellip; It's always an exciting experience to transition from "learning" to "applying".</p>
 
                             <p>The responsive framework uses the <a href="https://www.bourbon.io/">Bourbon</a> <span class="fancy">&amp;</span> <a href="https://neat.bourbon.io/">Neat</a> Sass libraries, while the interactive map uses the <a href="https://cloud.google.com/maps-platform/">Google Maps API</a>.
                             Fonts and icons use <a href="https://fonts.google.com/">Google Fonts</a> and <a href="https://fontawesome.com/">Font Awesome</a> respectively.</p>
@@ -142,6 +142,7 @@
                     <li>&copy; 2019 Jon Reimer</li>
                     <li>Design: <a href="
             //html5up.net">HTML5 UP</a></li>
+                    <li>Hosting: <a href="https://github.com/astranomaly/astranomaly.github.io">Github Pages</a></li>
                 </ul>
 
             </div>
