--- a/design.html
+++ b/design.html
@@ -146,6 +146,7 @@
                     <li>&copy; 2019 Jon Reimer</li>
                     <li>Design: <a href="
             //html5up.net">HTML5 UP</a></li>
+                    <li>Hosting: <a href="https://github.com/astranomaly/astranomaly.github.io">Github Pages</a></li>
                 </ul>
 
             </div>
